--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -40,18 +40,41 @@ header{
 nav{
     position: fixed;
     top: 100px;
-    background-color: palevioletred;
+    background-color: lightpink;
     height: 100%;
+    min-width: 155px;
 }
 
 nav ul {
     list-style-type: none;
     text-align: left;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
+
+nav li.current {
+    margin: 5px;
+    padding: 12.5px;
+}
+
+nav li:hover {
+
+    margin: 5px;
+    padding: 12.5px;
+}
+
+nav li{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid;
+    background-color: palevioletred;
+}
+
 
 /** main body **/
 main{
-    margin-left: 160px;
+    margin-left: 175px;
     margin-top: 100px;
     padding-top: 10px;
     clear: both;
