--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -1,11 +1,18 @@
 
 *{
     box-sizing: border-box; /* box size include border and padding*/
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    height: 100vh;
 }
 
 body{
     width: 700px;
     margin: 0 auto;
+    min-height: 100%;
 }
 
 h1 {
@@ -39,7 +46,7 @@ header{
 /** side bar **/
 nav{
     position: fixed;
-    top: 100px;
+    top: 90px;
     background-color: lightpink;
     height: 100%;
     min-width: 155px;
@@ -69,19 +76,31 @@ nav li{
     padding: 10px;
     border: 1px solid;
     background-color: palevioletred;
+    font-weight: 900;
+    color: antiquewhite;
+}
+
+nav a{
+    text-decoration: none;
+    color: bisque;
 }
 
 
 /** main body **/
 main{
-    margin-left: 175px;
+    height: auto;
+    min-height: 100%;
+    margin-left: 160px;
     margin-top: 100px;
     padding-top: 10px;
     clear: both;
+    background-color: darksalmon;
 }
 
 .dogs {
+    display: inline-flex;
     clear: both;
+    padding: 10px;
 }
 
 .dogs img{
