--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -49,14 +49,12 @@ nav{
     top: 90px;
     background-color: lightpink;
     height: 100%;
-    min-width: 155px;
+    width: 160px;
 }
 
 nav ul {
     list-style-type: none;
     text-align: left;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 
@@ -90,7 +88,7 @@ nav a{
 main{
     height: auto;
     min-height: 100%;
-    margin-left: 160px;
+    margin-left: 165px;
     margin-top: 100px;
     padding-top: 10px;
     clear: both;
@@ -106,4 +104,19 @@ main{
 .dogs img{
     float: left;
     margin-right: 10px;
+    width: 200px;
+    height: auto;
+}
+
+/* adjust for smaller screen */
+@media screen and (max-width: 700px) {
+    #loginForm{float: right;
+            margin-right:10px;}
+    header{width: 100vw;}
+    header h1 {width: 40vw;
+            font-size: calc(30px + 0.5vw)}
+    nav {width: 23vw;}
+    main{margin-left: 23.75vw;}
+    /* margin between main and nav
+    5px/700px ~ 0.77%, equate to 0.75vw */
 }
