--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -87,12 +87,24 @@ nav a{
 /** main body **/
 main{
     height: auto;
-    min-height: 100%;
+    min-height: calc(100vh - 100px);
     margin-left: 165px;
     margin-top: 100px;
     padding-top: 10px;
     clear: both;
     background-color: darksalmon;
+}
+
+main h2{
+    margin-bottom: 20px;
+}
+
+main p{
+    margin: 10px 0;
+}
+
+.welcome{
+    margin: 10px;
 }
 
 .dogs {
