--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -111,6 +111,7 @@ main p{
     display: inline-flex;
     clear: both;
     padding: 10px;
+    min-width: 100%;
 }
 
 .dogs img{
@@ -118,6 +119,10 @@ main p{
     margin-right: 10px;
     width: 200px;
     height: auto;
+}
+
+.dogs:hover{
+    background-color: lightsalmon;
 }
 
 /* adjust for smaller screen */
