--- a/GUI/stylesheet.css
+++ b/GUI/stylesheet.css
@@ -91,7 +91,7 @@ main{
     min-height: calc(100vh - 100px);
     margin-left: 165px;
     margin-top: 100px;
-    padding-top: 10px;
+    padding: 10px;
     clear: both;
     background-color: darksalmon;
 }
@@ -115,6 +115,10 @@ main p{
 }
 
 /** View Dogs page **/
+#pickupSelect{
+    padding: 10px;
+}
+
 .dogs {
     display: inline-flex;
     clear: both;
@@ -159,6 +163,11 @@ ul#pointsOfInterest {
 #pointsOfInterest input{
     margin-right: 10px;
     float: right;
+}
+
+/** Booking page **/
+#bookingDetails{
+    height: 175px;
 }
 
 /** Admin page **/
